# sandbox

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rustqual.toml
.ctx/: HANDOFF.sandbox.sandbox.yaml
crates/sandbox/: .rustqual-baseline.json  Cargo.toml
crates/sandbox-bench/: Cargo.toml
crates/sandbox-bench/benches/: basic.rs
crates/sandbox-cli/: Cargo.toml
crates/sandbox-cli/src/: main.rs
crates/sandbox/src/: capabilities.rs  error.rs  fs.rs  lib.rs  limits.rs  snapshot.rs  trace.rs
crates/sandbox/src/builtins/: core.rs  file.rs  flow.rs  mod.rs  nav.rs  text.rs  vars.rs
crates/sandbox/src/interpreter/: expansion.rs  hooks.rs  mod.rs
crates/sandbox/src/parser/: ast.rs  lexer.rs  mod.rs
crates/sandbox/tests/: integration.rs  proptest.rs
docs/plans/: 2026-05-22-execution-tracing.md  2026-05-22-rustqual-refactor.md  2026-05-22-subshell-isolation.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_exec.rs  fuzz_parser.rs  fuzz_structured.rs
