[workspace]
members = ["crates/sandbox", "crates/sandbox-cli", "crates/sandbox-bench"]
resolver = "2"
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Joseph O'Brien"]

[workspace.dependencies]
sandbox = { path = "crates/sandbox" }
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "2"
regex = "1"
fancy-regex = "0.14"
vfs = "0.12"
