[package]
name = "sandbox-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tokio = { version = "1", features = ["rt", "macros"] }
arbitrary = { version = "1", features = ["derive"] }

[dependencies.sandbox]
path = "../crates/sandbox"

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_exec"
path = "fuzz_targets/fuzz_exec.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_structured"
path = "fuzz_targets/fuzz_structured.rs"
test = false
doc = false
bench = false
