[package]
name = "sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "A standalone virtual bash interpreter with sandboxed filesystem"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
regex = { workspace = true }
vfs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "test-util"] }
